<resources>
    <string name="app_name" translatable="false">Caller Auto</string>
    <string name="this_action_may_contain_ads">This action may contain advertising</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="end_when_lifted">End when lifted</string>
    <string name="end_timer">End timer</string>
    <string name="mute_microphone">Mute microphone</string>
    <string name="enable_speaker">Enable speaker</string>
    <string name="hide_caller_name">Hide caller name</string>
    <string name="auto_call">Auto call</string>
    <string name="start_call_from_position">Start call from position</string>
    <string name="waiting_time">Waiting time</string>
    <string name="auto_end">Auto end</string>
    <string name="reject_incoming_calls">Reject incoming calls</string>
    <string name="anonymous_call">Anonymous call</string>
    <string name="repeat_list">Repeat list</string>
    <string name="redial_from_the_beginning_of_the_list">Redial from the beginning of the list</string>
    <string name="enter_your_time_here">Enter your time here</string>
    <string name="_ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="seconds">Seconds</string>
    <string name="permission">Permissions</string>
    <string name="content_permission_1">Please allow permission access</string>
    <string name="content_permission_2">This app requires permission to manage calls and camera</string>
    <string name="call_phone">Call Phone</string>
    <string name="call_default">Call Default</string>
    <string name="storage">Storage</string>
    <string name="_continue">Continue</string>
    <string name="permissions_denied">permissions denied</string>
    <string name="select_all">Select All</string>
    <string name="_delete">Delete</string>
    <string name="how_to_delete">How To Delete</string>
    <string name="are_you_sure_want_delete_item_for_selected">Are you sure want delete item for selected</string>
    <string name="_no">No</string>
    <string name="_yes">Yes</string>
    <string name="auto_end_time">Auto end time:</string>
    <string name="your_need_key_to_use_app">Your need key to use app</string>
    <string name="enter_your_key_here">Enter your key here</string>
    <string name="apply">Apply</string>
    <string name="login">Login</string>
    <string name="search_your_name">Search your name</string>
    <string name="input_name_new">Nhập tên mới của bạn</string>
    <string name="input_nick_name">Nhập biệt danh mới của bạn</string>
    <string name="input_phone">Nhập số mới</string>
    <string name="overlay">Overlay</string>

    <string name="lost_network_connection">Lost network connection</string>
    <string name="internet_connection_to_show_your_location">Internet connection to show your location</string>
    <string name="go_to_settings">Go to Settings</string>
</resources>