<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/ivPermission"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/img_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:fontFamily="@font/roboto_500"
        android:gravity="center"
        android:text="@string/your_need_key_to_use_app"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPermission" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_item_setting"
        android:fontFamily="@font/roboto_400"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_key_here"
        android:maxLength="150"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:paddingHorizontal="@dimen/_13sdp"
        android:paddingVertical="@dimen/_13sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_EBEBF5_30"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContent" />


    <TextView
        android:id="@+id/tvApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:background="@drawable/bg_dialog_negative_button"
        android:fontFamily="@font/roboto_500"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/edInput"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
