<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_500"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf=" parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:id="@+id/lnSelectAll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_13sdp"
    android:layout_marginHorizontal="@dimen/_13sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/appBar"
    android:orientation="horizontal">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_500"
        android:gravity="center_vertical"
        android:text="@string/select_all"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
       />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/checkboxAll"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="center"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_checkbox_language"
        />

</LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_400"
        android:gravity="center_vertical"
        android:text="@string/_delete"
        android:textColor="@color/color_red"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="@id/lnSelectAll"
        app:layout_constraintBottom_toBottomOf="@id/lnSelectAll"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:paddingBottom="@dimen/_100sdp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_data"
        app:layout_constraintTop_toBottomOf="@id/lnSelectAll"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <FrameLayout
        android:id="@+id/frAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_term"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:src="@drawable/it_action_accept_6"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>